--- a/wehelp_application.html
+++ b/wehelp_application.html
@@ -109,7 +109,7 @@
                 </p>
                 <p align="left">
                     我預計在第一階段八週的課程中，以在職的方式投入課程，由於第一階段預計以在職方式投入課程，所以我會在課程開始前，先透過彭彭的影片自學Python Flask網站後端開發、MySQL資料庫，及Vue框架等課程，並藉由台大資工系統訓練班「Node.js 和 MongoDB 網站後端開發」課程，學習Node.js 和 MongoDB相關知識，避免課程開始後，因為在職投入時間較少而導致進度落後。<br/>
-                    課程正式開始後，我預計利用平日早上5點至7點、晚上7點至12點的時間投入課程，假日則預計投入早上9點至下午7點的時間進行學習，中午12點至1點為休息時間，預估每周的學習時數約為51小時，我了解每週一的線上會議將於早上十點舉行，會錄影紀錄，我會爭取在這個時段請特休假，加入會議了解當週的作業安排及關鍵技術。<br/>
+                    第一階段的課程正式開始後，我預計利用平日早上5點至7點、晚上7點至12點的時間投入課程，假日則預計投入早上9點至下午7點的時間進行學習，中午12點至1點為休息時間，預估每周的學習時數約為51小時，我了解每週一的線上會議將於早上十點舉行，會錄影紀錄，我會爭取在這個時段請特休假，加入會議了解當週的作業安排及關鍵技術。<br/>
                     第二階段起的課程，我預計辭去正職工作投入轉職，從過往學習程式語言的經驗裡，我自認自己不是屬於反應特別快的人，在coding過程中，從釐清問題、拆解問題、找尋答案，到成功解決問題，都要花費不少時間，所以我預估全職轉職期間，每周約投入60個小時的時間進行學習，每天預計從早上9點開始學習至下午6點，中午12點至下午1點休息一小時。
                 </p>
             </div>
